--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="google-site-verification" content="eYUwuePtFx6XOlSR-eWpLg_ca85h7H0RdEF6hlCZRVA" />
     <title>Edulytics – Student Performance Analyzer</title>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans&family=Inter:wght@600&display=swap" rel="stylesheet">
     <style>
